Fixed article preview alignment

--- a/src/styles/components/_article-list.scss
+++ b/src/styles/components/_article-list.scss
@@ -4,6 +4,7 @@
   flex-grow: 1;
   flex-basis: 0;
   padding: 10px;
+  justify-content: space-between;
 
   // Apply spacing between articles
   :first-child {
