--- a/src/styles/components/_article-preview.scss
+++ b/src/styles/components/_article-preview.scss
@@ -1,12 +1,13 @@
 .article-preview {
-  min-width: 200px;
+  min-width: 100px;
   //border-style: solid;
-  margin-bottom: 0.5rem;
+  padding: 0.75rem;
   max-width: 300px;
 
   &__featured-image {
     max-width: 100%;
     max-height: 100%;
+    margin: 0;
   }
 
   &__title {
@@ -14,19 +15,19 @@
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.5rem;
-    margin: 0.2rem 0.2rem 0.2rem 0.2rem;
+    margin: 0 0 0.3rem 0;
   }
 
   &__authors {
     font-size: 0.8rem;
     font-weight: 400;
-    margin: 0.2rem 0.2rem 0.2rem 0.2rem;
+    margin: 0 0 0.3rem 0;
   }
 
   &__teaser {
     font-size: 0.8rem;
     font-weight: 300;
-    margin: 0.2rem 0.2rem 0.2rem 0.2rem;
+    margin: 0 0 1rem 0;
   }
 
 }
